# browser-janitor

./: .gitignore  README.md  browser_janitor_launcher.py  pyproject.toml
browser_janitor/: __init__.py  cli.py  console.py  extensions.py  performance.py  report.py  rules.py  scanner.py
scripts/: build-exe.ps1
tests/: test_performance.py  test_scanner.py
