[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-janitor"
version = "0.1.0"
description = "Safe browser cache scanner and cleaner that refuses to touch history, cookies, passwords or sessions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "davestinhast" }]
keywords = ["browser", "cache", "cleanup", "chrome", "edge", "firefox", "privacy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

[project.scripts]
browser-janitor = "browser_janitor.cli:main"

[tool.setuptools.packages.find]
include = ["browser_janitor*"]
